Modificamos html (inglés y pequeños cambios) y iniciamos script (cart).

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <article id="form">
                 <form action="procesarPeticion.jsp" method="get">
                     <label for="articleName">Nombre artículo: </label>
-                        <input id="articleName" type="text" name="articleName" autofocus required> 
+                        <input id="articleName" type="text" name="articleName" autofocus> 
                         <span id="spanName"></span>
 
                     <label for="articlePrice">Precio artículo: </label>
@@ -69,7 +69,7 @@
                         
                     <input id="print" type="button" value="Imprimir">
 
-                    <input id="reset" type="reset" value="Restablecer">   
+                    <input id="reset" type="button" value="Restablecer">   
                 </form>
             </article>
         </section>
