Agrando tamaño del campo "text" de cartArticles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <input id="add" type="button" value="Añadir al carrito">
 
                     <label for="cartArticles">Artículos en el carrito: </label>
-                        <input id="cartArticles" type="text" name="cartArticles">
+                        <input id="cartArticles" type="text" name="cartArticles" size="80">
 
                     <label for="totalPrice">Precio total del carrito: </label>
                         <input id="totalPrice" type="number" name="totalPrice">
