cambios en el script y en el index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <span id="spanName"></span>
 
                     <label for="articlePrice">Precio artículo: </label>
-                        <input id="articlePrice" type="number" name="articlePrice" required>
+                        <input id="articlePrice" type="text" name="articlePrice" required>
                         <span id="spanArticlePrice"></span>
 
                     <label for="units">Unidades: </label>
@@ -39,7 +39,7 @@
                         <input id="cartArticles" type="text" name="cartArticles" size="80">
 
                     <label for="totalPrice">Precio total del carrito: </label>
-                        <input id="totalPrice" type="number" name="totalPrice">
+                        <input id="totalPrice" type="text" name="totalPrice">
 
                     <label for="wayToPay">Forma de pago: </label>
                         <select id="wayToPay" name="wayToPay">
