Añadidas ideas para los input

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea AE-1</title>
-    <link rel="icon" href="assets/img-carrito/cesta_pestaña.png">
+    <link rel="icon" href="img/cesta_pestaña.png"> <!--Jorge: he cambiado la ruta que estaba mal-->
     <link href="css/estilos.css" rel="stylesheet">
     <script src="js/cart.js"></script>
 </head>
