--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea AE-1</title>
-    <!-- <link rel="icon" href="img/cesta_pestaña.png">  Isra: lo dejo comentado, porque no se porque está esto aquí, no hace nada-->
+    <link rel="icon" href="img/cesta_pestaña.png">
     <link href="css/estilos.css" rel="stylesheet">
     <script src="js/cart.js"></script>
 </head>
