--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>        
         <h1>Supermercado</h1>
-        <img src="img/logo.PNG" width="60" height="60" alt="Icono supermercado" id="logo">
+        <img src="img/logo.PNG" width="400" alt="Icono supermercado" id="logo">
     </header>
     <main>
         <section>
@@ -41,14 +41,14 @@
                     <label for="totalPrice">Precio total del carrito: </label>
                         <input id="totalPrice" type="text" name="totalPrice" readonly> 
 
-                    <label for="wayToPay">Forma de pago: </label>
-                        <select id="wayToPay" name="wayToPay">
+                    <label id="wayToPay" class="wayToPay" for="wayToPay">Forma de pago: </label>
+                        <select id="selectWayToPay" class="selectWayToPay" name="wayToPay">
                             <option value="S">--Seleccione--</option>
                             <option value="T">Tarjeta</option>
                             <option value="E">Efectivo</option>
                         </select>
 
-                    <div class="cardPay">
+                    <div id="cardPay" class="cardPay">
                         <label for="cardHolder">Titular tarjeta: </label>
                             <input id="cardHolder" type="text" name="cardHolder">
 
@@ -59,17 +59,17 @@
                             <input id="cvv" type="text" name="cvv">
                     </div>
 
-                    <div class="cashPay">
+                    <div id="cashPay" class="cashPay">
                         <label for="cashAmount">Importe efectivo: </label>
                             <input id="cashAmount" type="text" name="cashAmount" readonly> 
                     </div>
 
-                    <input id="terms" type="checkbox" name="terms" value="Y"> <!-- mirar css para ponerlo en linea con el label -->
-                        <label for="terms">Acepto las condiciones de la compra</label>
+                    <input class="buttonTerms" id="terms" type="checkbox" name="terms" value="Y"> <!-- mirar css para ponerlo en linea con el label -->
+                        <label class="terms" for="terms">Acepto las condiciones de la compra</label>
                         
-                    <input id="print" type="button" value="Imprimir">
+                    <input class="print" id="print" type="button" value="Imprimir">
 
-                    <input id="reset" type="button" value="Restablecer">   
+                    <input class="reset" id="reset" type="button" value="Restablecer">   
                 </form>
             </article>
         </section>
