cambio color cajas si error, coma en priceT y longitud campos html

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                             <input id="cardHolder" type="text" name="cardHolder">
 
                         <label for="cardNumber">Número tarjeta: </label>
-                            <input id="cardNumber" type="text" name="cardNumber">
+                            <input id="cardNumber" type="text" name="cardNumber" maxlength="14">
                         
                         <label for="cvv">CVV: </label>
-                            <input id="cvv" type="text" name="cvv">
+                            <input id="cvv" type="text" name="cvv" maxlength="3" size="3">
                     </div>
 
                     <div id="cashPay" class="cashPay">
