añado funcionalidad de imprimir formulario relleno

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                     <div id="cashPay" class="cashPay">
                         <label for="cashAmount">Importe efectivo: </label>
                             <input id="cashAmount" type="text" name="cashAmount" readonly> 
+                        <label for="cashDelivered">Efectivo entregado: </label>
+                            <input id="cashDelivered" type="text" name="cashDelivered"> <!-- nueva caja para poner efectivo entregado-->
                     </div>
 
                     <input class="buttonTerms" id="terms" type="checkbox" name="terms" value="Y"> <!-- mirar css para ponerlo en linea con el label -->
