Quito código comentado y ordeno código JS

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                         <label for="cashAmount">Importe efectivo: </label>
                             <input id="cashAmount" type="text" name="cashAmount" readonly> 
                         <label for="cashDelivered">Efectivo entregado: </label>
-                            <input id="cashDelivered" type="text" name="cashDelivered"> <!-- nueva caja para poner efectivo entregado-->
+                            <input id="cashDelivered" type="text" name="cashDelivered"> <!-- caja para poner efectivo entregado-->
                     </div>
 
-                    <input class="buttonTerms" id="terms" type="checkbox" name="terms" value="Y"> <!-- mirar css para ponerlo en linea con el label -->
+                    <input class="buttonTerms" id="terms" type="checkbox" name="terms" value="Y"> 
                         <label class="terms" for="terms">Acepto las condiciones de la compra</label>
                         
                     <input class="print" id="print" type="button" value="Imprimir">
