--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <label for="cashAmount">Importe efectivo: </label>
                             <input id="cashAmount" type="text" name="cashAmount" readonly> 
                         <label for="cashDelivered">Efectivo entregado: </label>
-                            <input id="cashDelivered" type="text" name="cashDelivered"> <!-- caja para poner efectivo entregado-->
+                            <input id="cashDelivered" type="text" name="cashDelivered">
                     </div>
 
                     <input class="buttonTerms" id="terms" type="checkbox" name="terms" value="Y"> 
