añado terminos y condiciones de compra

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
                     <input class="buttonTerms" id="terms" type="checkbox" name="terms" value="Y"> 
                         <label class="terms" for="terms">Acepto las condiciones de la compra</label>
+                    <a id="tc" href="docs/Terminos_de_uso_y_condiciones_generales_de_compra.pdf" target="_blank">Condiciones de compra</a>
                         
                     <input class="print" id="print" type="button" value="Imprimir">
 
