ponemos CVV tipo pasword para que no se vea al imprimir

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <input id="cardNumber" type="text" name="cardNumber" maxlength="16">
                         
                         <label for="cvv">CVV: </label>
-                            <input id="cvv" type="text" name="cvv" maxlength="3" size="1">
+                            <input id="cvv" type="password" name="cvv" maxlength="3" size="3">
                     </div>
 
                     <div id="cashPay" class="cashPay">
